--- a/Resources/Resource1.resx
+++ b/Resources/Resource1.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PatientAdded" xml:space="preserve">
+    <value>"Patient is added"</value>
+  </data>
+  <data name="ProvideAllPatientDetails" xml:space="preserve">
+    <value>"Please enter every patient details"</value>
+  </data>
+  <data name="ProvideAllUserDetails" xml:space="preserve">
+    <value>"Please enter everything"</value>
+  </data>
+  <data name="UserAdded" xml:space="preserve">
+    <value>"User is added"</value>
+  </data>
   <data name="UserNotFound" xml:space="preserve">
     <value>"User not found"</value>
   </data>
